# python-project-template

./: .gitignore  README.md  cookiecutter.json  pre-commit-config.yaml
{{ cookiecutter.project_folder_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileDev  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_folder_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_folder_name }}/notebooks/: test.ipynb
{{ cookiecutter.project_folder_name }}/queries/: query.sql
{{ cookiecutter.project_folder_name }}/src/: app.py
{{ cookiecutter.project_folder_name }}/src/secrets/: .env
{{ cookiecutter.project_folder_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_folder_name }}/src/{{ cookiecutter.package_name }}/utils/: __init__.py
{{ cookiecutter.project_folder_name }}/tests/: conftest.py  test_api.py  test_generic.py
{{ cookiecutter.project_folder_name }}/{{ cookiecutter.package_name }}/utils/: logging.py
